# mini_openvr_driver

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
Unresolved Issues/test_pacman_spdlog/: CMakeLists.txt  readme.md
Unresolved Issues/test_utf8_and_LF/: logger.cpp  readme.md
auxiliary/: CMakeLists.txt
auxiliary/aruco/: CMakeLists.txt  aruco.hpp  aruco_detect_board.cpp  readme.md
auxiliary/log/: logger.cpp  logger.hpp
include/: define.hpp  device_aruco.hpp  device_hmd.hpp  device_provider.hpp  logger.hpp  ovrd_interface.hpp
resources/mini/: driver.vrdrivermanifest
resources/mini/resources/settings/: default.vrsettings
src/: device_aruco.cpp  device_hmd.cpp  device_provider.cpp  logger.cpp  ovrd_interface.cpp  test_drv_aruco_with_webcamera.cpp  test_spdlog.cpp
temp/: CMakeLists.txt  readme.md
